IN-335 UI alignment issues for transformations

--- a/src/app/components/workbench/data-transformation/data-transformation.component.scss
+++ b/src/app/components/workbench/data-transformation/data-transformation.component.scss
@@ -6,7 +6,7 @@
 .plug-icon { margin-right: 12px !important; }
 .connections-layer-h {  height: 470px;  overflow: auto; }
 .cursor-move {cursor: move;}
-.table-width {width: 18%;}
+.table-width {width: auto;}
 .image-width {width: 5%;}
 .dropdown-toggle::after { display:none; }
 .plus-icon-size { width: 24px; height: 24px; display: flex; align-items: center; justify-content: center; }
